--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.maxActive=5
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=utf-8
