--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=utf-8
+logging.level.mapper=debug
